Added customers section

--- a/index.html
+++ b/index.html
@@ -113,6 +113,29 @@
         <p class="example__subtitle">Lorem ipsum dolor sit amet, dolor sit amet dolor sit amet.</p>
     </div>
 </section>
+<section class="customers">
+    <div class="container d-flex">
+        <div class="customers__info">
+            <h5 class="customers__subtitle">Prior clients</h5>
+            <h3 class="customers__title">Happy customers.</h3>
+            <p class="customers__text">Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.</p>
+        </div>
+        <div class="customers_logos d-flex">
+            <div class="customers_logo">
+                <img src="img/customers/customer_first.svg" alt="">
+            </div>
+            <div class="customers_logo">
+                <img src="img/customers/customer_second.svg" alt="">
+            </div>
+            <div class="customers_logo">
+                <img src="img/customers/customer_third.svg" alt="">
+            </div>
+            <div class="customers_logo">
+                <img src="img/customers/customer_fourth.svg" alt="">
+            </div>
+        </div>
+    </div>
+</section>
 <section class="example example_third">
     <div class="example__text">
         <h5 class="example__title">The swirling staircase</h5>
