Added projects and team sections + fixed css

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
             </blockquote>
             <figcaption class="figcaption">
                 <div class="figcaption__img">
-                    <img src="img/quote/quote_figcaption.png" alt="Stephen Collier">
+                    <img src="img/figcaption/figcaption_first.png" alt="Stephen Collier">
                 </div>
                 <div class="figcaption__text">
                     <div>Stephen Collier</div>
-                    <cite>Senior Partner</cite>
+                    <span>Senior Partner</span>
                 </div>
             </figcaption>
         </figure>
@@ -140,6 +140,95 @@
     <div class="example__text">
         <h5 class="example__title">The swirling staircase</h5>
         <p class="example__subtitle">Lorem ipsum dolor sit amet, dolor sit amet dolor sit amet.</p>
+    </div>
+</section>
+<section class="projects">
+    <div class="container">
+        <h2 class="projects__title">Featured projects</h2>
+        <h4 class="projects__subtitle">Some of the latest and greatest projects from us here at Wishbone+Partners.</h4>
+        <div class="previews d-flex">
+            <article class="preview">
+                <img src="img/projects/project_first.jpg" alt="">
+                <div class="preview__info">
+                    <h5 class="preview__subtitle">New York</h5>
+                    <h4 class="preview__title">Big Road Brewery</h4>
+                </div>
+                <a href="#" class="preview__button">Read more</a>
+            </article>
+            <article class="preview">
+                <img src="img/projects/project_second.jpg" alt="">
+                <div class="preview__info">
+                    <h5 class="preview__subtitle">New York</h5>
+                    <h4 class="preview__title">Big Road Brewery</h4>
+                </div>
+                <a href="#" class="preview__button">Read more</a>
+            </article>
+            <article class="preview">
+                <img src="img/projects/project_third.jpg" alt="">
+                <div class="preview__info">
+                    <h5 class="preview__subtitle">New York</h5>
+                    <h4 class="preview__title">Big Road Brewery</h4>
+                </div>
+                <a href="#" class="preview__button">Read more</a>
+            </article>
+        </div>
+
+    </div>
+</section>
+<section class="team">
+    <div class="container d-flex">
+        <div class="team__info">
+            <h3 class="team__title">Meet our team</h3>
+            <p class="team__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis.</p>
+            <a href="" class="team__link">See team</a>
+        </div>
+        <div class="team__preview d-flex">
+            <div class="figcaption">
+                <div class="figcaption__img">
+                    <img src="img/figcaption/figcaption_first.png" alt="Stephen Collier">
+                </div>
+                <div class="figcaption__text">
+                    <div>Stephen Collier</div>
+                    <span>Senior Partner</span>
+                </div>
+            </div>
+            <div class="figcaption">
+                <div class="figcaption__img">
+                    <img src="img/figcaption/figcaption_second.png" alt="Stephen Collier">
+                </div>
+                <div class="figcaption__text">
+                    <div>Nolan Peters</div>
+                    <span>Associate</span>
+                </div>
+            </div>
+            <div class="figcaption">
+                <div class="figcaption__img">
+                    <img src="img/figcaption/figcaption_third.png" alt="Stephen Collier">
+                </div>
+                <div class="figcaption__text">
+                    <div>Ferris Wonder</div>
+                    <span>Associate Partner</span>
+                </div>
+            </div>
+            <div class="figcaption">
+                <div class="figcaption__img">
+                    <img src="img/figcaption/figcaption_fourth.png" alt="Stephen Collier">
+                </div>
+                <div class="figcaption__text">
+                    <div>Aria Stone</div>
+                    <span>Senior Partner</span>
+                </div>
+            </div>
+            <div class="figcaption">
+                <div class="figcaption__img">
+                    <img src="img/figcaption/figcaption_fifth.png" alt="Stephen Collier">
+                </div>
+                <div class="figcaption__text">
+                    <div>Niko Ferry</div>
+                    <span>Partner</span>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 <section class="contact">
