--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
 <body>
 <header>
     <div class="container d-flex">
-        <div class="logo">
-            <a class="logo__link" href="#" title="Wishbone+Partners">
+            <a class="logo" href="#" title="Wishbone+Partners">
                 <img class="logo__img" src="img/header/logo.svg" alt="Logo">
             </a>
-        </div>
         <nav>
             <ul class="d-flex">
                 <li>
@@ -251,7 +249,7 @@
         </div>
         <p class="footer__copyright">Powered by <a href="#">Webflow</a></p>
 
-        <div class="d-flex">
+        <div class="footer__licence_social d-flex">
             <p class="footer__licence">All rights reserved Wishbone+Partners, Inc. <a href="#">Licensing</a></p>
             <div class="social">
                 <ul class="d-flex">
